--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "cheerio": "^1.0.0-rc.2",
     "joi": "^14.3.1",
     "mqtt": "^2.18.8",
+    "mysql": "^2.16.0",
     "request": "^2.88.0",
     "require-all": "^3.0.0",
-    "sqlite3": "^4.0.6",
     "winston": "^3.2.1"
   },
   "devDependencies": {
